--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${PORT:3000}
 
 spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:45679/railway
 spring.datasource.username=postgres
